# steinmetz-analysis

./: LICENSE  Makefile  NMA_CN_Project.ipynb  README.md  def_func.ipynb  pyproject.toml
ferret/cli/: cli.py
himanshu/: Brain_regions.txt  GPFA_visulation.ipynb  PCA_visualisation.ipynb  Session_Trajectory4.txt  Systematic_nb.ipynb  averagetd.py  cpy_gpfa.ipynb  def_func.ipynb  get_plt_trajectory.py
himanshu/CrossvalFiles/Session_0/: ACA_session_0_4_d_25.txt  CA3_session_0_4_d_25.txt  DG_session_0_4_d_25.txt  LS_session_0_4_d_25.txt  MOs_session_0_4_d_25.txt  SUB_session_0_4_d_25.txt  VISp_session_0_4_d_25.txt  wheel_session0.txt
himanshu/CrossvalFiles/Session_1/: CA1_session_0_4_d_25.txt  POST_session_0_4_d_25.txt  VISl_session_0_4_d_25.txt  VISpm_session_0_4_d_25.txt  wheel_session1.txt
himanshu/CrossvalFiles/Session_10/: CP_session_10_4_d_25.txt  LSc_session_10_4_d_25.txt  LSr_session_10_4_d_25.txt  MOp_session_10_4_d_25.txt  PT_session_10_4_d_25.txt  wheel_session10.txt
himanshu/CrossvalFiles/Session_11/: ACA_session_11_4_d_25.txt  CA1_session_11_4_d_25.txt  DG_session_11_4_d_25.txt  LGd_session_11_4_d_25.txt  LH_session_11_4_d_25.txt  MD_session_11_4_d_25.txt  MOs_session_11_4_d_25.txt  PL_session_11_4_d_25.txt  SUB_session_11_4_d_25.txt  VISam_session_11_4_d_25.txt  VISp_session_11_4_d_25.txt  wheel_session11.txt
himanshu/CrossvalFiles/Session_12/: ACA_session_12_4_d_25.txt  CA1_session_12_4_d_25.txt  DG_session_12_4_d_25.txt  LGd_session_12_4_d_25.txt  MB_session_12_4_d_25.txt  MOs_session_12_4_d_25.txt  (+9 more)
notebooks/: get_index.py  rory.ipynb  samuel.ipynb
(+316 files in other folders)
