[tool.poetry]
name = "ferret"
version = "0.0.1"
description = ""
authors = ["Rory Byrne <rory@rory.bio>"]

[tool.poetry.scripts]
ferret = "ferret.cli.cli:cli"

[tool.poetry.dependencies]
python = "~3.9"
jupyterlab = "^3.0.16"
numpy = "^1.21.0"
scipy = "^1.7.0"
requests = "^2.25.1"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
